fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-171-7e33e2b6a9.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function OutlineBorder() {
  return <Box bg="#FFF" border="solid 3px #FF1C1C" borderRadius="20px" overflow="hidden" />
}"
