fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-172-99028c85ce.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function OutlineBorder() {
  return (
    <Box
      bg="#FFF"
      borderRadius="20px"
      outline="solid 3px #FF1C1C"
      outlineOffset="-1.5px"
      overflow="hidden"
    />
  )
}"
