fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-173-64dbd7a102.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function OutlineBorder() {
  return <Box bg="#FFF" borderRadius="20px" outline="solid 3px #FF1C1C" overflow="hidden" />
}"
