fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-174-68dd47d3f8.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Outline,Border() {
  return (
    <Box
      bg="#FFF"
      border="solid 3px #FF1C1C"
      borderRadius="20px"
      boxShadow="0 4px 4px 0 #00000040"
      overflow="hidden"
    />
  )
}"
