fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-177-c147e7dd39.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Circle() {
  return <Box bg="#D9D9D9" borderRadius="50%" />
}"
