fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-178-d69d60d688.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Circle() {
  return (
    <Box
      bg="#D9D9D9"
      maskImage="url(/icons/ellipse3621.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
