fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-179-80620f6587.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Border() {
  return (
    <Box
      bg="#FFF"
      borderRadius="20px"
      outline="solid 1px #000"
      outlineOffset="-0.5px"
      overflow="hidden"
    />
  )
}"
