fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-180-ad1a31fd03.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Border() {
  return (
    <Box
      bg="#FFF"
      borderRadius="20px"
      outline="dashed 1px #000"
      outlineOffset="-0.5px"
      overflow="hidden"
    />
  )
}"
