fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-181-5afa626d49.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Border() {
  return <Image borderTop="solid 1px #000" src="/icons/border.svg" />
}"
