fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-182-c45d19171b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Opacity() {
  return (
    <Box
      bg="#FFF"
      border="solid 1px #000"
      borderRadius="20px"
      opacity="0.2"
      overflow="hidden"
    />
  )
}"
